adding note module to api spec generated new server code fixed swagger ui missing in the old version of open api context
