# models/update_note_request.go
@@ -1,0 +1,43 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// UpdateNoteRequest update note request
+//
+// swagger:model UpdateNoteRequest
+type UpdateNoteRequest struct {
+
+	// is important
+	IsImportant bool `json:"isImportant,omitempty"`
+}
+
+// Validate validates this update note request
+func (m *UpdateNoteRequest) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UpdateNoteRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UpdateNoteRequest) UnmarshalBinary(b []byte) error {
+	var res UpdateNoteRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
